testsuite/tests/printer/Ppr024.stderr

Ppr024.hs:1:1: error:
    The IO action ‘main’ is not defined in module ‘Main’

Ppr024.ppr.hs:1:1: error:
    The IO action ‘main’ is not defined in module ‘Main’
